<resources>
    <string name="app_name">Word Per Word Reader</string>
    <string name="app_main_title">Word Per Word Reader</string>
    <string name="browse_epub">Browse EPUB</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="quit">Quit</string>
    <string name="epub_pick_cancelled">No file selected</string>
    <string name="reading_preview_title">First 100 words</string>
    <string name="no_preview_available">No preview available</string>
    <string name="epub_read_error">Could not read this EPUB file</string>
    <string name="epub_no_text_found">No readable text found in this EPUB</string>
    <string name="page_counter">Page : \n%1$s / %2$s</string>
    <string name="word_counter">Words : \n%1$s / %2$s</string>
    <string name="speed_counter">Reading speed : \n%1$d%%</string>
    <string name="back_to_reader">Back to reader</string>
    <string name="statistics_empty">No statistics available</string>
    <string name="statistics_summary">Number of pages: %1$d\nPage with the biggest number of words: %2$d (%3$d words)</string>
    <string name="statistics_page_words">Page %1$s - %2$s words</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="number_of_words">Number of words</string>
    <string name="time_taken_at_100_speed">Time taken at 100% speed</string>
    <string name="detailed_statistics">Detailed Statistics</string>
</resources>